Created and styled header component with nav icons

--- a/index.html
+++ b/index.html
@@ -3,10 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./styles.css" rel="stylesheet" />
-    <title>Airbnb</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <title>Airbnb | Holiday rentals, cabins, beach houses & more</title>
 </head>
+
 <body>
-    
+  <header>
+    <div class="search-bar">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <input type="text" placeholder="Where to? Anywhere ·Anytime ·Add guests">
+        <div class="search-filters">
+        </div>
+    </div>
+
+<div class="header-nav">
+    <div class="header-nav-icon">
+    <a href="#" type="button" class="icon"><img src="https://a0.muscache.com/im/pictures/mediaverse/category_icon/original/3e5243c8-4d15-4c6b-97e3-7ba2bb7bb880.png" alt="Icons">
+    <span>Icons</span>
+    </a>
+    </div>
+    <div class="header-nav-icon">
+        <a href="#"><img src="https://a0.muscache.com/pictures/732edad8-3ae0-49a8-a451-29a8010dcc0c.jpg" alt="Cabins">
+        <span>Cabins</span>
+        </a>
+    </div>
+    <div class="header-nav-icon">
+        <a href="#"><img src="https://a0.muscache.com/pictures/bcd1adc0-5cee-4d7a-85ec-f6730b0f8d0c.jpg" alt="Beachfront">
+        <span>Beachfront</span>
+        </a>
+    </div>
+    <div class="header-nav-icon">
+        <a href="#"><img src="https://a0.muscache.com/pictures/3fb523a0-b622-4368-8142-b5e03df7549b.jpg" alt="Amazing pools">
+        <span>Amazing pools</span>
+        </a>
+    </div>
+    <div class="header-nav-icon">
+        <a href="#"><img src="https://a0.muscache.com/pictures/7630c83f-96a8-4232-9a10-0398661e2e6f.jpg" alt="Rooms">
+        <span>Rooms</span>
+        </a>
+    </div>
+</div>
+</header>
+
+
+
+
 </body>
 </html>
