Added and styled footer nav bar

--- a/index.html
+++ b/index.html
@@ -47,6 +47,31 @@
 </header>
 
 
+<main>
+
+  <div class="footer-nav">
+      <a href="#" type="button" class="explore-nav">
+      <div class="footer-nav-icon">
+      <i class="fa-solid fa-magnifying-glass"></i>
+  </div>
+  <div class="footer-nav-button-label">Explore</div></a>
+
+      <a href="#" type="button" class="wishlist-nav">
+          <div class="footer-nav-icon">
+      <i class="fa-regular fa-heart"></i>
+  </div>
+  <div class="footer-nav-button-label">Wishlist</div></a>
+  
+      <a href="#" class="login-nav">
+          <div class="footer-nav-icon">
+      <i class="fa-regular fa-circle-user"></i>
+  </div>
+  <div class="footer-nav-button-label">Log in</div></a>
+  </div>
+
+  </main>
+
+
 
 
 </body>
