Added and styled experiences section

--- a/index.html
+++ b/index.html
@@ -69,9 +69,184 @@
   <div class="footer-nav-button-label">Log in</div></a>
   </div>
 
+  <div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEyNjIzMTk3NDU3MjE4Nzg2NA%3D%3D/original/f4cbe542-3ce0-4c6f-a8f1-d2120c1b2420.jpeg?im_w=720&im_q=highq" alt="X-Mansion">
+        <span class="live-badge">Live</span>
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Train at the X-Mansion</h2>
+        <p>Hosted by Jubilee</p>
+        <p><strong>£30</strong> per guest</p>
+    </div>
+</a>
+</div>
+
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTE2MjI1MjI0NDQ0MzYzMjM4Mg%3D%3D/original/ae3426d1-fba4-44d4-bed2-690426f25f7a.jpeg?im_w=720&im_q=highq" alt="Musée d’Orsay">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Open the Olympic Games at Musée d’Orsay</h2>
+        <p>Hosted by Mathieu Lehanneur</p>
+        <p><strong>Coming 13 June</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEzMTA4MzUyMzk5Mjc3MDU5Nw%3D%3D/original/d62c78db-3c98-46e7-8566-d685d5c689f3.png?im_w=720&im_q=highq" alt="Inside Out 2">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Make core memories with Inside Out 2</h2>
+        <p>Hosted by Joy</p>
+        <p><strong>Coming June</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEzMTA4OTQ5ODA0MDcwMTE4Mw%3D%3D/original/4f7a276e-9995-4b32-bda6-300de0619b25.png?im_w=720&im_q=highq" alt="Prince's Purple Rain house">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Stay in Prince's Purple Rain house</h2>
+        <p>Hosted by Wendy and Lisa</p>
+        <p><strong>Coming August</strong></p>
+    </div>
+</a>
+</div>
+
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEzMTA4NzY0ODgzNzUzNjQzNw%3D%3D/original/cda19e4c-ae11-47b1-831b-a29f94ab76dc.png?im_w=720&im_q=highq" alt="Kevin Hart">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Go VIP with Kevin Hart</h2>
+        <p>Hosted by Kevin Hart</p>
+        <p><strong>Coming August</strong></p>
+    </div>
+</a>
+</div>
+
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEyNjMyMzc5Mzc2MTc3OTEzMg%3D%3D/original/01819c16-43a1-4aee-9957-9edce6eb8e16.png?im_w=720&im_q=highq" alt="Doja Cat">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Join a living room session with Doja</h2>
+        <p>Hosted by Doja Cat</p>
+        <p><strong>Coming October</strong></p>
+    </div>
+</a>
+</div>
+
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEyNTQ0NTEyMzEwMTI3NDg1MQ%3D%3D/original/bd73f0f8-9057-4bbc-ad70-1db13eb5c03f.png?im_w=720&im_q=highq" alt="Musée d’Orsay">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Wake up in the Musée d’Orsay</h2>
+        <p>Hosted by Mathieu Lehanneur</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTE0ODQ2MDI1NTE4MDMzOTQ4MQ%3D%3D/original/c92634d0-4964-439a-905d-b9129af14d34.jpeg?im_w=720&im_q=highq" alt="Incredibles Supersuit">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Design your Incredibles Supersuit</h2>
+        <p>Hosted by Edna Mode</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEzMTg2NzMzNDc0MDk1Nzg4NA%3D%3D/original/b676fc8d-8250-4df0-a7cb-728b0486e371.jpeg?im_w=720&im_q=highq" alt="X-Mansion">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Crash at the X-Mansion</h2>
+        <p>Hosted by Jubilee</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEzMTA4NjI3OTI1MjIxNDQyOA%3D%3D/original/bc989f2d-eca8-4bcf-a9b0-b70b8e685a64.jpeg?im_w=720&im_q=highq" alt="Janhvi Kapoor">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Live like a Bollywood star Janhvi Kapoor</h2>
+        <p>Hosted by Janhvi Kapoor</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEyNjI0NzUwMDUwMTg2Mzg5MA%3D%3D/original/99417998-fa44-4c75-ae77-287c1468977b.jpeg?im_w=720&im_q=highq" alt="Feid">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Go on tour with Feid</h2>
+        <p>Hosted by Feid</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEzMTA3NzgxMzcwNzcxOTUzNQ%3D%3D/original/872f434b-9348-4ff1-8c6f-754fdbab4010.jpeg?im_w=720&im_q=highq" alt="Khaby Lame">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Game with Khaby Lame</h2>
+        <p>Hosted by Khaby Lame</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEyNjE4NTg5MzIzNjI0NjI2MA%3D%3D/original/e6b26733-2c15-47d9-b097-6968b39bb697.jpeg?im_w=720&im_q=highq" alt="Up house">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Drift off in the Up house</h2>
+        <p>Hosted by Carl Fredricksen</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
   </main>
-
-
 
 
 </body>
