added past experiences section and updated google font link in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     <title>Airbnb | Holiday rentals, cabins, beach houses & more</title>
 </head>
 
@@ -241,6 +244,99 @@
     <div class="listing-info">
         <h2>Drift off in the Up house</h2>
         <p>Hosted by Carl Fredricksen</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+<h1>Past experiences</h1>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEyMzIwMTE1Njc3Njg0MTIzOQ%3D%3D/original/fb9dcb8d-7fa5-402f-91ae-fa2a26e9f097.png?im_w=720&im_q=highq" alt="Ferrari Museum">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Spend the night in the Ferrari Museum</h2>
+        <p>Hosted by Marc Gené</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/miso/Hosting-881808599061267756/original/b16970cf-1d55-4edd-bb1f-e1735d0a228e.jpeg?im_w=720&im_q=highq" alt="Shrek's Swamp">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Shrek's Swamp</h2>
+        <p>Hosted by Donkey</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/miso/Hosting-857387972692815761/original/d106e0ef-f825-4ff8-baf7-86256a54fbd5.jpeg?im_w=720&im_q=highq" alt="Barbie's Malibu DreamHouse">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Barbie's Malibu DreamHouse, Ken's Way</h2>
+        <p>Hosted by Ken</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/miso/Hosting-694055224756906854/original/76f85a0c-b3e2-4f1d-9aa9-d7838f2393c6.jpeg?im_w=720&im_q=highq" alt="Ted Lasso's Favorite Pub">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Ted Lasso's Favorite Pub</h2>
+        <p>Hosted by Mae</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/miso/Hosting-782615921189136934/original/c67f78f1-5807-449a-9a88-753b7fa62d6a.jpeg?im_w=720&im_q=highq" alt="Seth Rogen">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Houseplant Retreat</h2>
+        <p>Hosted by Seth Rogen</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/miso/Hosting-53274539/original/365299e3-f926-47ee-bcbf-606d6a0370b9.jpeg?im_w=720&im_q=highq" alt="Home Alone">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>Home Alone Holiday</h2>
+        <p>Hosted by Buzz</p>
+        <p><strong>Sold out</strong></p>
+    </div>
+</a>
+</div>
+
+<div class="listing">
+    <div class="listing-image">
+        <a href=#><img src="https://a0.muscache.com/im/pictures/be0957a9-da56-47d6-89ca-223b6e75321a.jpg?im_w=720&im_q=highq" alt="Blockbuster">
+        <span class="share-badge"><img src="https://p7.hiclipart.com/preview/515/917/108/share-icon-computer-icons-button-safari-web-browser-button.jpg"></span>
+    </div>
+    <div class="listing-info">
+        <h2>The Last Blockbuster</h2>
+        <p>Hosted by Sandi</p>
         <p><strong>Sold out</strong></p>
     </div>
 </a>
