Added and styled the website footer section

--- a/index.html
+++ b/index.html
@@ -344,6 +344,22 @@
 
   </main>
 
+  <section>
+    <footer>
 
+      <div class="container">
+      <div class="inspiration-section">
+      <div class="section-title">Inspiration for future getaways</div>
+      <div class="tabs">
+      <div class="tab-active">Popular</div>
+      <div class="tab">Historic</div>
+      <div class="tab">Coastal</div>
+      <div class="tab">Islands</div>
+      <div class="tab">Lakes</div>
+      <div class="tab">Unique stays</div>
+      </div>
+      
+      </footer>
+  </section>
 </body>
 </html>
