added future inspirations locations section

--- a/index.html
+++ b/index.html
@@ -359,6 +359,41 @@
       <div class="tab">Unique stays</div>
       </div>
       
+      <hr class="solid">
+      <div class="row">
+          <div class="column">
+          <a href="#">Aberfeldy</a> 
+          <p>Holiday rentals</p>
+          </div>
+          <div class="column">
+          <a href="#">Athens</a> 
+          <p>Rentals with pools</p>
+          </div>
+          <div class="column">
+         <a href="#">Bakewell</a>
+          <p>Cottage rentals</p>
+          </div>
+          <div class="column">
+          <a href="#">Bath</a>
+          <p>Cabin rentals</p>
+          </div>
+          <div class="column">
+          <a href="#">Amsterdam</a> 
+          <p>Flat rentals</p>
+          </div>
+          <div class="column">
+          <a href="#">Aviemore</a>
+          <p>Holiday rentals</p>
+          </div>
+          <div class="column">
+          <a href="#">Barcelona</a>
+          <p>Flat rentals</p>
+          </div>
+          <div class="column">
+          <a href="#">Show more <i class="fa-solid fa-chevron-down"></i></a>
+          </div>
+      </div>
+      
       </footer>
   </section>
 </body>
