added and styled support link section

--- a/index.html
+++ b/index.html
@@ -394,6 +394,18 @@
           </div>
       </div>
       
+<hr class="solid">
+<h3>Support</h3>
+
+<ul class="support-links">
+    <li class="support-link-item"><a href="#">Help Centre</a></li>
+    <li class="support-link-item"><a href="#">AirCover</a></li>
+    <li class="support-link-item"><a href="#">Anti-discrimination</a></li>
+    <li class="support-link-item"><a href="#">Disability support</a></li>
+    <li class="support-link-item"><a href="#">Cancellation options</a></li>
+    <li class="support-link-item"><a href="#">Report neighbourhood concern</a></li>
+</ul>
+
       </footer>
   </section>
 </body>
