added and styled hosting section

--- a/index.html
+++ b/index.html
@@ -406,6 +406,17 @@
     <li class="support-link-item"><a href="#">Report neighbourhood concern</a></li>
 </ul>
 
+<hr class="solid">
+<h3>Hosting</h3>
+<ul class="hosting-links">
+    <li class="hosting-link-item"><a href="#">Airbnb your home</a></li>
+    <li class="hosting-link-item"><a href="#">AirCover for Hosts</a></li>
+    <li class="hosting-link-item"><a href="#">Hosting resources</a></li>
+    <li class="hosting-link-item"><a href="#">Community forum</a></li>
+    <li class="hosting-link-item"><a href="#">Hosting responsibly</a></li>
+    <li class="hosting-link-item"><a href="#">Join a free hosting class</a></li>
+</ul>
+
       </footer>
   </section>
 </body>
