--- a/index.html
+++ b/index.html
@@ -417,6 +417,17 @@
     <li class="hosting-link-item"><a href="#">Join a free hosting class</a></li>
 </ul>
 
+<hr class="solid">
+<h3>Airbnb</h3>
+<ul class="airbnb-links">
+    <li class="airbnb-link-item"><a href="#">Newsroom</a></li>
+    <li class="airbnb-link-item"><a href="#">New features</a></li>
+    <li class="airbnb-link-item"><a href="#">Careers</a></li>
+    <li class="airbnb-link-item"><a href="#">Investors</a></li>
+    <li class="airbnb-link-item"><a href="#">Gift cards</a></li>
+    <li class="airbnb-link-item"><a href="#">Airbnb.org emergency stays</a></li>
+</ul>
+
       </footer>
   </section>
 </body>
