--- a/index.html
+++ b/index.html
@@ -428,7 +428,26 @@
     <li class="airbnb-link-item"><a href="#">Airbnb.org emergency stays</a></li>
 </ul>
 
-      </footer>
-  </section>
+<hr class="solid">
+<div class="country-setting">
+    <i class="fa-solid fa-globe"></i><span> English GB</span>
+    <i class="fas fa-pound-sign"></i><span> GBP</span>
+</div>
+
+<div class="copyright-info">
+    <i class="far fa-copyright"></i> 2024 Airbnb, Inc.
+</div>
+
+<ul class="final-footer-links">
+    <li class="final-footer-link-item"><a href="#">Privacy</a></li>
+    <li class="final-footer-link-item"><a href="#">• Terms</a></li>
+    <li class="final-footer-link-item"><a href="#">• Sitemap</a></li>
+    <li class="final-footer-link-item"><a href="#">• UK Modern Slavery Act</a></li>
+    <li class="final-footer-link-item"><a href="#">• Company details</a></li>
+</ul>
+
+</footer>
+</section>
+
 </body>
 </html>
