changed <i> element to span in html

--- a/index.html
+++ b/index.html
@@ -55,23 +55,25 @@
   <div class="footer-nav">
       <a href="#" type="button" class="explore-nav">
       <div class="footer-nav-icon">
-      <i class="fa-solid fa-magnifying-glass"></i>
+        <span class="fa-solid fa-magnifying-glass" aria-hidden="true"></span>
+      <!-- <i class="fa-solid fa-magnifying-glass"></i> -->
   </div>
   <div class="footer-nav-button-label">Explore</div></a>
 
       <a href="#" type="button" class="wishlist-nav">
           <div class="footer-nav-icon">
-      <i class="fa-regular fa-heart"></i>
+            <span class="fa-regular fa-heart" aria-hidden="true"></span>
+      <!-- <i class="fa-regular fa-heart"></i> -->
   </div>
   <div class="footer-nav-button-label">Wishlist</div></a>
   
       <a href="#" class="login-nav">
           <div class="footer-nav-icon">
-      <i class="fa-regular fa-circle-user"></i>
+            <span class="fa-regular fa-circle-user" aria-hidden="true"></span>
+      <!-- <i class="fa-regular fa-circle-user"></i> -->
   </div>
   <div class="footer-nav-button-label">Log in</div></a>
   </div>
-
   <div class="listing">
     <div class="listing-image">
         <a href=#><img src="https://a0.muscache.com/im/pictures/hosting/Hosting-U3RheVN1cHBseUxpc3Rpbmc6MTEyNjIzMTk3NDU3MjE4Nzg2NA%3D%3D/original/f4cbe542-3ce0-4c6f-a8f1-d2120c1b2420.jpeg?im_w=720&im_q=highq" alt="X-Mansion">
@@ -390,7 +392,7 @@
           <p>Flat rentals</p>
           </div>
           <div class="column">
-          <a href="#">Show more <i class="fa-solid fa-chevron-down"></i></a>
+          <a href="#">Show more<span class="fa-solid fa-chevron-down" aria-hidden="true"></span></a>
           </div>
       </div>
       
